# autorenamer

./: .gitignore  Benchmarks.md  Cargo.toml  Justfile  README.md  benchmarks.sh  flake.nix
.github/workflows/: autorenamer.yml  autorenamer_check.yml  autorenamer_prs.yml  cargo_build.yml  cargo_clippy.yml  cargo_format.yml  cargo_test.yml  project_status.yml  rust.yml
.warp/workflows/: benchmark.yml
benches/: auto.rs
src/: data.rs  main.rs
src/lib/: mod.rs
src/lib/file_ops/: mod.rs
src/lib/parsing/: mod.rs
tests/: mod.rs
