[package]
name = "autorenamer"
version = "1.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "autorenamer"
path = "src/lib/mod.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
dirs = "6.0.0"
nom = "7.1.3"
notify-rust = "4.11.3"
regex = "1.11.1"

[dev-dependencies]
divan = "0.1.16"

[[bench]]
name = "auto"
harness = false
